--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,6 @@
-browser=SL[/Browsers/FirefoxBrowser
-external.project.url=
+auxiliary.org-netbeans-modules-javascript-nodejs.ask_2e_run_2e_enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.debug_2e_port=9292
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_path=C:\\other\\node-v16.14.0-win-x64\\node-v16.14.0-win-x64\\node.exe
+browser=Chrome
+external.project.url=https://terminal-unknown.github.io\\root
 server=INTERNAL
