added nodejs gruntfile and other things

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,11 +8,13 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=Assets/scss:Assets/css
 auxiliary.org-netbeans-modules-javascript-grunt.action_2e_build=build
 auxiliary.org-netbeans-modules-javascript-grunt.action_2e_clean=clean
 auxiliary.org-netbeans-modules-javascript-grunt.action_2e_rebuild=clean build
+auxiliary.org-netbeans-modules-javascript-grunt.tasks=dest, build
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=false
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=
+auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=main.js
 auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
-auxiliary.org-netbeans-modules-javascript2-editor.jsversion=ECMA7
 auxiliary.org-netbeans-modules-javascript2-json.json_2e_comments=true
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
@@ -22,13 +24,14 @@ browser.run=true
 file.reference.terminal-xxx-bin=bin
 file.reference.terminal-xxx-public_html=public_html
 file.reference.terminal-xxx-root=root
+file.reference.terminal-xxx-src=src
 file.reference.terminal-xxx-test=test
 file.reference.terminal-xxx-util=util
 file.reference.terminal-xxx-utils=utils
 files.encoding=UTF-8
 project.licensePath=./nbproject/licenseheader.txt
 site.root.folder=${file.reference.terminal-xxx-root}
-source.folder=${file.reference.terminal-xxx-util}
+source.folder=${file.reference.terminal-xxx-src}
 start.file=index.html
 test.folder=${file.reference.terminal-xxx-test}
 web.context.root=/terminal-xxx
