--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -17,7 +17,7 @@ auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=main.js
 auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
 auxiliary.org-netbeans-modules-javascript2-json.json_2e_comments=true
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
-auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=D:\\github\\Unknown-Rep\\Pers\\Root\\Assets\\js\\libs
 browser.autorefresh.Chrome=true
 browser.highlightselection.Chrome=true
 browser.run=true
