--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,6 @@ files.encoding=UTF-8
 project.licensePath=./nbproject/licenseheader.txt
 site.root.folder=${file.reference.terminal-xxx-root}
 source.folder=${file.reference.terminal-xxx-src}
-start.file=index.html
+start.file=terminal.html
 test.folder=${file.reference.terminal-xxx-test}
 web.context.root=/terminal-xxx
